--- a/Ü10/CMakeLists.txt
+++ b/Ü10/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(10-1 Alois_Stoeckl-10-1.cpp)
 add_executable(10-2 Alois_Stoeckl-10-2.cpp)
 add_executable(10-3 Alois_Stoeckl-10-3.cpp)
-add_executable(10-test Alois_Stoeckl-10-test.cpp)
+add_executable(10-4 Alois_Stoeckl-10-4.cpp)
