--- a/Ü11/CMakeLists.txt
+++ b/Ü11/CMakeLists.txt
@@ -4,6 +4,6 @@ project(LFU)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(11-1 Alois_Stoeckl-11-1.cpp)
-#add_executable(11-2 Alois_Stoeckl-11-2.cpp)
+add_executable(11-2 Alois_Stoeckl-11-2.cpp)
 #add_executable(11-3 Alois_Stoeckl-11-3.cpp)
 #add_executable(11-4 Alois_Stoeckl-11-4.cpp)
